# GeoportalTH_Imagery_Download

./: README.md  environment.yml  pyproject.toml  setup.cfg
GeoportalTH_Imagery_Download/: GeoportalTH_main.py  idlist.txt  op_tile_finder.py
Jupyter_Notebook_visualisation_example/: GeoportalTH_Imagery_Download.ipynb
geothimagery/: GeoportalTH_main.py  op_tile_finder.py
id_lists/: README.md  idlist_20221117.txt
src/GeoportalTH_Imagery_Downlaod_F_M.egg-info/: PKG-INFO
