[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "geothimagery"
version = "1.1.0"
description = "A package for the automated downloading Orthophotos and Digital Elevation Models from the Thuringian Geoportal."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LICENSE"}
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
"Operating System :: OS Independent"
]
dependencies = [
    "gdal>=3.3.3",
    "geopandas>=0.8.1",
    "shapely>=1.8.0",
    "requests>=2.24.0",
    "pandas>=1.3.4",
    "joblib>=0.17.0"
]

[tool.setuptools.packages.find]
include = ["geothimagery"]
exclude = [
    "Jupyter_Notebook_visualisation_example",
    "id_lists"
]
