[metadata]
name = GeoportalTH_Imagery_Downlaod_F-M
version = 1.1.0
author = Marcel Felix & Friederike Metz
author_email = marzelmusik@gmail.com
description = A package for the automated downloading Orthophotos and Digital Elevation Models from the Thuringian Geoportal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Marsimperator/GeoportalTH_Imagery_Download
project_urls = 
    Bug Tracker = https://github.com/Marsimperator/GeoportalTH_Imagery_Download/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
	osgeo >=3.3.3
    	geopandas >=0.8.1
    	shapely >=1.8.0
    	requests >=2.24.0
    	pandas >=1.3.4
    	joblib >=0.17.0
        
python_requires = >=3.8

[options.packages.find]
where = GeoportalTH_Imagery_Download